--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ jira==3.1.1
 keyring==23.5.0
 oauthlib==3.2.0
 pycparser==2.21
+python-dotenv==0.20.0
 requests==2.27.1
 requests-oauthlib==1.3.1
 requests-toolbelt==0.9.1
